<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- neworder.xml Fields -->
    <string name="app_name">Service Order Management</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Send Email</string>
    <string name="wbutton1">New Order</string>
    <string name="wbutton2">Existing Orders</string>
    <string name="wbutton3">Status Reports</string>
    <string name="wbutton4">Payments</string>
    <string name="wbutton5">Settings</string>
    <string name="aomtext">Job Card Management System</string>
    <string name="tvneworderidname"> Order ID</string>
    <string name="tvnewitemnamelabel"> Item Name</string>
    <string name="tvnewitemdesclabel"> Serial Number</string>
    <string name="tvnewitemdatelabel"> Date</string>
    <string name="tvassignedtolabel"> Assigned To</string>
    <string name="tvassignedbylabel"> Assigned By</string>
    <string name="tvengaccessorieslabel">Additional Accessories </string>
    <string name="tvproblemrptlabel"> Problem Reported</string>
    <string name="tvsolutionlabel">Recommended Solution </string>
    <string name="tvetcname">Estimated Time</string>
    <string name="tvduedatelabel">Due Date</string>
    <string name="tvstatuslabel">Status</string>
    <string name="title_activity_new_order">NewOrder</string>
    <string name="tvcustomernewoldlabel">Customer</string>
    <string name="newcustomerlabel">New</string>
    <string name="existingcustomerlabel">Existing Customer</string>
    <string name="title_activity_new_customer">Enter Customer Details</string>
    <string name="saveneworderlabel">Save/Update</string>
    <string name="tvcustomermobilelabelnew"> Customer Mobile</string>
    <string name="tvpymtstatuslabel">Payment Status</string>
    <string name="tvordertypelabel">Item Type</string>
    <string name="tvpayduelabel">Amount Due</string>
    <string name="tvpayreceivedlabel">Amount Received</string>
    <string name="tvpayreceivedonlabel">Amt Received on</string>
    <string name="btviewneworderlabel">View Order</string>
    <string name="btprintorderlabel"> Print JobCard</string>
    <string name="tvdelconfirmlabel"> Delivered(Y/N)</string>
    <string name="tvdelconfirmdatelabel"> Delivered Date</string>
    <string name="tvcompletedactualdatelabel"> Order Completed Date</string>
    <string name="tvprioritylabel">Priority</string>
    <string name="tvcomplexitylabel">Complexity</string>
    <string name="btnextlabel">Next Job</string>
<string name="tvordersparescostlabel">Total Spare(s) Cost</string>
    
    
    <!-- new_customer Fields -->
    <string name="tvnewcustomeridlabel">Customer ID</string>
    <string name="tvcustomernamelabel">Name</string>
    <string name="tvcustomermobilelabel">Mobile No</string>
    <string name="tvcustomeremaillabel">Email ID</string>
    <string name="tvcustomeraddresslabel">Address</string>
    <string name="tvnewcustomeridlabel5">Customer Since</string>
    <string name="savenewcustomerlabel">Create/Update</string>
    <string name="viewcustomerslabel">View Customers</string>
    <string name="title_activity_view_customer">View Customer Details</string>
    <string name="tvviewdetailslabel">Showing Customer Details</string>
    <string name="tvdelcustrecordlabel">Delete Record</string>
    <string name="title_activity_find_customer">Find Customer</string>
    <string name="findcustomerlabel">Find Customer</string>
    <string name="createneworderlabel">Create Order</string>

    <!-- View order fields -->

    <string name="title_activity_view_order">View Orders</string>
    <string name="tvvieworderdetailslabel">View All Orders</string>
    <string name="title_activity_existing__orders">Find and View Orders</string>
    <string name="btsearchexistorderlabel">Search Orders</string>
    <string name="tvchangeassignlabel">Change Assigned</string>

    <!-- Manage Existing Orders -->
    <string name="title_activity_manage_existing_orders">Manage Existing Orders</string>
    <string name="manageorderslabel"> Search Orders to view/update by </string>
    <string name="mexistorderslabel"> Order ID  </string>

    <!-- Order Lookup -->
    <string name="mexistordersbynolabel"> Mobile Number </string>
    <string name="btorderlookuplabel">Order Lookup</string>
    <string name="title_activity_order__lookup">Order Lookup</string>
    <string name="olbtsearchoder_label">Search</string>
    <string name="lltvorderid_label">Order Id</string>
    <string name="lltvorder_date_label">Order Date</string>
    <string name="lltvorder_name_label">Order Name</string>
    <string name="title_activity_payments_r">Payments Received Today</string>

    <!-- Main screen -->

    <string name="textview1"> Create new orders and add new customers  </string>
    <string name="textview2"> View Existing/update Orders </string>
    <string name="textview3"> Generate reports and email them </string>
    <string name="textview4"> View Payments and see payment statuses</string>
    <string name="textview5"> Change System settings and admin functions </string>
    <string name="title_activity_manage_customers">Manage Customers Information</string>

    <!-- Settings screen -->

    <string name="title_activity_settings">Settings</string>
    <string name="settingsbutton1">Customer Info</string>
    <string name="settingsbutton2">Employee Info</string>
    <string name="settingsbutton3">Admin</string>
    
    <string name="settingsbutton4">Backup</string>
    <string name="title_activity_reports">Reports</string>
    
    
    
    

    <!-- Reports -->
    <string name="rptorderduetodaylabel"> Reports-Due today</string>
    <string name="rptorderpendinglabel"> Pending Orders</string>
    <string name="neworderduedatebtlabel"> Pick Date</string>
    <string name="title_activity_print_view">Print View</string>
    <string name="btconsolidatedlabel">Reports-Consolidated</string>
    
    <string name="tvconsolidatedlabel"> Click to generate consolidated report</string>
    <string name="tvordersbyemplabel"> Click to generate consolidated report based on each employee</string>
    <string name="tvviewneworderlabel"> Click to view all the job cards in the system</string>
    <string name="tvrptorderduetodaylabel"> Click to view the job cards due today</string>
    <string name="tvrptorderpendinglabel"> Click to view pending orders</string>









    <!-- -Print vuew -->

    <string name="printjobcardlabel">Print Job card</string>

    <!-- Payment R -->

    <string name="pendingpaylabel">Pending Payment</string>
    <string name="receivedpaylabel">Received Payment</string>
    <string name="partialpaylabel">Partial Payment</string>

    <!-- Login page strings -->

    <string name="tvusernamelabel">User Name</string>
    <string name="tvpasswordlabel">Password</string>
    <string name="tvloginlabel">Login</string>
    <string name="title_activity_orm_login">OrmLogin</string>
    <string name="btloginlabel"> Login</string>
    <string name="btcancellabel"> Cancel</string>
    <string name="title_activity_employee">Employee</string>

    <!-- Employee page Settings -->

    <string name="tvempidlabel"> Employee Id</string>
    <string name="tvfirstnamelabel">First Name </string>
    <string name="tvlastnamelabel">Last Name</string>
    <string name="tvempusernamelabel">User Name </string>
    <string name="tvemppasswordlabel">Password </string>
    <string name="tvempmobilenumberlabel">Mobile Number </string>
    <string name="tvempemailidlabel">Email Id</string>
    <string name="tvempaddresslabel"> Address</string>
    <string name="empcreatelabel">Create</string>
    <string name="empsaveupdatelabel">Save/Update</string>
    <string name="empviewdetailslabel">View</string>
    <string name="empdeletelabel">Delete</string>
    <string name="empviewalldetailslabel"> Reports-All</string>
    <string name="title_activity_admin__settings">Settings</string>
    <string name="title_activity_emp_reports">Custom Reports</string>
    <string name="tvfromdatelabel">From </string>
    <string name="tvtodatelabel">To</string>
    <string name="btgeneratereplabel">Generate Report</string>
    <string name="etordersbyemplabel"> Reports- Employee</string>
    <string name="title_activity_emp_view_report">Reports- For Employees</string>
    <string name="tvaccesslevellabel">Access Level</string>
    <string name="title_activity_consolidated_reports">Consolidated Reports</string>
    <string name="title_activity_user_profile">User Profile</string>

    <!-- Strings for the user profile settings page -->

    <string name="tvpref01label">Shop/Entity Name </string>
    <string name="tvpref02label">Shop# </string>
    <string name="tvpref03label">Street line1 </string>
    <string name="tvpref04label">Street line2 </string>
    <string name="tvpref05label">City/District </string>
    <string name="tvpref06label">Pincode </string>
    <string name="tvpref07label">LandLine1</string>
    <string name="tvpref08label">Mobile </string>
    <string name="tvpref09label">Email ID</string>
    <string name="tvpref10label">Shop Registration Number</string>
    <string name="tvpref11label">PAN</string>
    <string name="tvpref12label">TIN</string>
    <string name="tvtandclabel">Enter Terms and conditions if any, to be displayed on the Job card</string>
    <string name="tvpref13label">1)</string>
    <string name="tvpref14label">2)</string>
    <string name="tvpref15label">3)</string>
    <string name="tvpref16label">4)</string>
    <string name="tvpref17label">5)</string>
    <string name="tvpref18label">6)</string>
    <string name="tvpref19label">7)</string>
    <string name="tvpref20label">8)</string>
    <string name="btsaveupdateuplabel">Save/Update</string>
    <string name="title_activity_backup">Backup</string>
    
    <string name="itemsendemaillabel">Email Report</string>
    
    <!--  Backup  -->
    
    <string name="btbackup1label">Generate CSV for all Job cards </string>

</resources>