<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

android:orientation="vertical"
 >

    <Button
        android:id="@+id/btconsolidated"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btconsolidatedlabel" />

    <Button
        android:id="@+id/btordersbyemp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/etordersbyemplabel" />

    <Button 
             android:id="@+id/reportbtviewneworder"
             android:layout_width="fill_parent"
                android:layout_height="wrap_content"
             android:text="@string/btviewneworderlabel" 
            />

       <Button 
             android:id="@+id/rptorderduetoday"
             android:layout_width="fill_parent"
                android:layout_height="wrap_content"
             android:text="@string/rptorderduetodaylabel" 
            />
         <Button 
             android:id="@+id/rptorderpending"
             android:layout_width="fill_parent"
                android:layout_height="wrap_content"
             android:text="@string/rptorderpendinglabel" 
            />
    
</LinearLayout>
