<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
android:orientation="vertical"


 >

    <Button
        android:id="@+id/settingsbutton1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/settingsbutton1" />
    
       <Button
        android:id="@+id/settingsbutton2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/settingsbutton2" />
    
     
      <Button
        android:id="@+id/settingsbutton3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/settingsbutton3" />
    
      
      <Button
        android:id="@+id/settingsbutton4"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/settingsbutton4" />
    

</LinearLayout>
