<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
   android:orientation="vertical" >

    <Button
        android:id="@+id/pendingpay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
        android:text="@string/pendingpaylabel" />

    <Button
        android:id="@+id/receivedpay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
     
       
        android:text="@string/receivedpaylabel" />

    <Button
        android:id="@+id/partialpay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
      
        
        android:text="@string/partialpaylabel" />

</LinearLayout>
